k3s-cluster-apps/apps/networking/external_hassio/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: hassio
spec:
  type: ExternalName
  externalName: hassio.home.lan.
