k3s-cluster-apps/apps/networking/external_hassio/traefikCRD.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hassio
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hassio.${SECRET_CLUSTER_DOMAIN}`)
      services:
        - kind: Service
          name: hassio
          port: 8123
